<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_football_background"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:paddingLeft="36dp"
    android:paddingRight="36dp"
    tools:context="com.example.android.ngscorekeeper.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_score_a"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/aldrich"
                android:text=""
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="86sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aldrich"
                android:text="@string/score_separator"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="86sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/text_score_b"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/aldrich"
                android:text=""
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="86sp"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp">

            <TextView
                android:layout_width="0dp"

                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/comfortaa_light"
                android:text="@string/team_a"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textStyle="bold" />


            <TextView
                android:layout_width="0dp"

                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/comfortaa_light"
                android:text="@string/team_b"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorLines" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingTop="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginEnd="16dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bg_squarebutton"
                android:fontFamily="@font/comfortaa_light"
                android:onClick="clickGoalA"
                android:text="@string/goal"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_border">

                <View
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:background="#ff0000" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:onClick="clickRedA"
                    android:text="@string/add_sign" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/colorLines" />

                <TextView
                    android:id="@+id/red_score_a"
                    android:layout_width="36dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comfortaa_light"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/colorLines" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_border">

                <View
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:background="#ffe100" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:background="#00ffffff"
                    android:onClick="clickYellowA"
                    android:text="@string/add_sign" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/colorLines" />

                <TextView
                    android:id="@+id/yellow_score_a"
                    android:layout_width="36dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comfortaa_light"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/colorLines" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/colorLines" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="16dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bg_squarebutton"
                android:fontFamily="@font/comfortaa_light"
                android:onClick="clickGoalB"
                android:text="@string/goal"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_border">

                <TextView
                    android:id="@+id/red_score_b"
                    android:layout_width="36dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comfortaa_light"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/colorLines" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/colorLines" />


                <Button
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:background="#00ffffff"
                    android:onClick="clickRedB"
                    android:text="@string/add_sign" />

                <View
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:background="#ff0000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_border">

                <TextView
                    android:id="@+id/yellow_score_b"
                    android:layout_width="36dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comfortaa_light"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/colorLines" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/colorLines" />


                <Button
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:background="#00ffffff"
                    android:onClick="clickYellowB"
                    android:text="@string/add_sign" />

                <View
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:background="#ffe100" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <ImageButton
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:onClick="clickReset"
        android:src="@drawable/ic_reset"
        android:contentDescription="@string/reset_button_desription" />

</LinearLayout>
